kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-static-default-backend
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: simple-static-default-backend
