kubernetes/ingress-no-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-static-default-backend
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
  - host: *
    http:
      paths:
      - path: /
        backend:
          serviceName: simple-static-default-backend
          servicePort: 80
